fixed bug with collapse

--- a/src/app/components/technologies/technologies.component.css
+++ b/src/app/components/technologies/technologies.component.css
@@ -198,3 +198,8 @@ border-radius: 10px;
 .card-body{
   display: inline-flex;
 }
+
+.margin_top{
+  margin-top: 200px;
+
+}
